[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CQFLearning"
version = "0.1.0"
description = "CQF Learning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Liu Busi", email = "z@xption.com"}
]
keywords = ["auto trader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=21.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "yfinance>=0.2.0",
    "ta>=0.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "fastparquet>=2024.11.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "pyhumps>=3.8.0",
    "apscheduler>=3.11.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=6.0.0",
    "autoflake>=2.0.0",
    "gunicorn>=23.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
autotrader = "app.run:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 999
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 999
known_first_party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
